--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon --watch src --ext ts --exec ts-node src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  }
+,
   "keywords": [],
   "author": "",
   "license": "ISC",
