--- a/backend/package.json
+++ b/backend/package.json
@@ -1,30 +1,36 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --watch src --ext ts --exec ts-node src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
-  }
-,
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "morgan": "^1.10.0",
-    "path": "^0.12.7"
+    "nodemailer": "^7.0.5",
+    "path": "^0.12.7",
+    "pug": "^3.0.3",
+    "puppeteer": "^24.14.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.15.3",
+    "@types/nodemailer": "^6.4.17",
+    "@types/pug": "^2.0.10",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typescript": "5.4"
   }
 }
