--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/pug": "^2.0.10",
     "nodemon": "^3.1.10",
+    "prisma": "^6.14.0",
     "ts-node": "^10.9.2",
     "typescript": "5.4"
   }
