--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 USER_EMAIL=firtsadic3@gmail.com
-USER_PASSWORD=zvpamazdgocbcnrx
+USER_PASSWORD=lozxvzlmapynnxhw
 
 
 # This was inserted by `prisma init`:
@@ -12,5 +12,10 @@ USER_PASSWORD=zvpamazdgocbcnrx
 # The following `prisma+postgres` URL is similar to the URL produced by running a local Prisma Postgres 
 # server with the `prisma dev` CLI command, when not choosing any non-default ports or settings. The API key, unlike the 
 # one found in a remote Prisma Postgres URL, does not contain any sensitive information.
+#67843238:testpublickey_81XDx6otLe8mbNVVR92Rc1cq80685Dfmp6Y0vbJji4Iif
 
 DATABASE_URL="postgresql://postgres:RoadTo7kand8k@localhost:5432/superfruits?schema=super_catalogo"
+IZIPAY_MERCHANT_ID="67843238"
+IZIPAY_PUBLIC_KEY="testpublickey_81XDx6otLe8mbNVVR92Rc1cq80685Dfmp6Y0vbJji4Iif"
+IZIPAY_API_KEY="testpassword_i1AcjpgPMVOlVNFU8J72T5RWGUcSGv0N28pWCOSfZ7fdQ"
+IZIPAY_HMAC_KEY="trCY4rJdFhWYDEnHfziQHJwz2pwJb93mQJCLdlmI4cwsu"
