--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "commonjs",
-    "moduleResolution": "node",
+    "target": "ES2020",              // o ES2022 / ESNext
+    "module": "ESNext",              // muy importante
+    "moduleResolution": "NodeNext",  // resolución correcta para imports
     "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "outDir": "dist",
-    "rootDir": "src",
-    "types": ["node"]
+    "skipLibCheck": true,
+    "outDir": "./dist"
   },
-  "include" : ["src/**/*"]
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
